* added driver for ESS ES1868/1869 chips
* user can now select only some soundcards
* changed native device naming style
* added support for the 2.2.0+ soundcore module
  - the modules configuration (/etc/conf.modules) is heavy changed
* added driver for Trident 4DWave DX/NX chips
* added EMU-8000 driver
* added OSS sequencer emulation client

0.1.4 -> 0.2.0

* added prototype of sequencer
* added timer interface
* added kernel-side rawmidi interface
  - fixed deadlock / oops in rawmidi code
* fixes in SB-16 mixer code
  - added snd_mic_agc option for snd-sb16 module to allow control of Mic AGC
* enhanced OSS's /dev/sndstat information interface
* big PCM code changes (separated middle level code)
  - added overrange variable to playback status structure
  - added hw_formats to playback/record information structure
  - added playback pause ioctl
* mixer improved
  - added join mute flag
  - added stereo record source flags
  - added route flags (LTOR and RTOL)
  - better support for exclusive record source
* changes in header files (added deep checking)
* added support for Yamaha OPL3-SA2/SA3 soundcards
* added empty envelopes for synthesizers
  - OPL2/OPL3 (AdLib timers are supported when connected to IRQ line)
  - GUS (GF1, InterWave)
  - EMU-8000 (SB AWE)
* added generic i2c bus code (from bttv driver)
  - added support for TEA6330T chip (i2c bus)
  - added support for InterWave card from STB with TEA6330T chip
* added support for S3 SonicVibes PCI chip
* added support for Ensoniq AudioPCI ES1370/ES1371 chips
* improved support for MPU401-UART
* improved support for CS4231(A) chips
* improved /proc interface
  - renamed ALSA directory from sound to asound
    (due possible conflict in future with OSS/Lite)
  - added /proc/asound/dev directory interface for sound devices
  - added /proc/asound/#card#/pcm#o interface
* added switches interfaces (control, mixer, pcm, rawmidi)
* sound.h file renamed to asound.h (due to conflict with newer 2.1.X kernels)