@@ -19,18 +19,18 @@ ksublevel=@ksublevel@
 kextraversion=@kextraversion@
 GENKSYMS=@GENKSYMS@
 
-SNDCFG_KERNELDIR=@SNDCFG_KERNELDIR@
-SNDCFG_MVERSION=@SNDCFG_MVERSION@
-SNDCFG_PCI=@SNDCFG_PCI@
-SNDCFG_ISAPNP_KERNEL=@SNDCFG_ISAPNP_KERNEL@
-SNDCFG_ISAPNP=@SNDCFG_ISAPNP@
-SNDCFG_HAL2=@SNDCFG_HAL2@
-SNDCFG_SEQUENCER=@SNDCFG_SEQUENCER@
-SNDCFG_OSSEMUL=@SNDCFG_OSSEMUL@
+CONFIG_SND_KERNELDIR=@CONFIG_SND_KERNELDIR@
+CONFIG_SND_MVERSION=@CONFIG_SND_MVERSION@
+CONFIG_SND_PCI=@CONFIG_SND_PCI@
+CONFIG_ISAPNP_KERNEL=@CONFIG_ISAPNP_KERNEL@
+CONFIG_ISAPNP=@CONFIG_ISAPNP@
+CONFIG_SND_SGI=@CONFIG_SND_SGI@
+CONFIG_SND_SEQUENCER=@CONFIG_SND_SEQUENCER@
+CONFIG_SND_OSSEMUL=@CONFIG_SND_OSSEMUL@
 
 CC=@CC@
 CPP=@CPP@ -M -D__DEPEND__
-INCLUDE=-I$(SNDCFG_KERNELDIR)/include -I$(TOPDIR)/include
+INCLUDE=-I$(CONFIG_SND_KERNELDIR)/include -I$(TOPDIR)/include
 COPTS=$(c_opts) -Wall -Wstrict-prototypes -fomit-frame-pointer -pipe
 LINKER=ld -r
 SNDVERSIONS=$(TOPDIR)/include/sndversions.h
