@@ -249,6 +249,8 @@ else
 		AC_DEFINE(CONFIG_SND_SEQ_MIDI_EMUL)
 		CONFIG_SND_AINSTR_IW="1"
 		AC_DEFINE(CONFIG_SND_AINSTR_IW)
+		CONFIG_SND_SEQ_INSTR="1"
+		AC_DEFINE(CONFIG_SND_SEQ_INSTR)
 		CONFIG_SND_CS4231="1"
 		AC_DEFINE(CONFIG_SND_CS4231)
 		;;
@@ -279,6 +281,8 @@ else
 		AC_DEFINE(CONFIG_SND_SEQ_MIDI_EMUL)
 		CONFIG_SND_AINSTR_IW="1"
 		AC_DEFINE(CONFIG_SND_AINSTR_IW)
+		CONFIG_SND_SEQ_INSTR="1"
+		AC_DEFINE(CONFIG_SND_SEQ_INSTR)
 		CONFIG_SND_CS4231="1"
 		AC_DEFINE(CONFIG_SND_CS4231)
 		CONFIG_SND_TEA6330T="1"
@@ -313,6 +317,8 @@ else
 		AC_DEFINE(CONFIG_SND_SEQ_MIDI_EMUL)
 		CONFIG_SND_AINSTR_IW="1"
 		AC_DEFINE(CONFIG_SND_AINSTR_IW)
+		CONFIG_SND_SEQ_INSTR="1"
+		AC_DEFINE(CONFIG_SND_SEQ_INSTR)
 		CONFIG_SND_CS4231="1"
 		AC_DEFINE(CONFIG_SND_CS4231)
 		;;
@@ -343,6 +349,8 @@ else
 		AC_DEFINE(CONFIG_SND_SEQ_MIDI_EMUL)
 		CONFIG_SND_AINSTR_IW="1"
 		AC_DEFINE(CONFIG_SND_AINSTR_IW)
+		CONFIG_SND_SEQ_INSTR="1"
+		AC_DEFINE(CONFIG_SND_SEQ_INSTR)
 		CONFIG_SND_ES1688="1"
 		AC_DEFINE(CONFIG_SND_ES1688)
 		;;
@@ -373,6 +381,8 @@ else
 		AC_DEFINE(CONFIG_SND_SEQ_MIDI_EMUL)
 		CONFIG_SND_AINSTR_IW="1"
 		AC_DEFINE(CONFIG_SND_AINSTR_IW)
+		CONFIG_SND_SEQ_INSTR="1"
+		AC_DEFINE(CONFIG_SND_SEQ_INSTR)
 		;;
 	audiodrive1688)
 		CONFIG_SND_AUDIODRIVE1688="1"
