@@ -40,7 +40,7 @@
 #define SND_DEVICE_TYPE_SEQUENCER SND_MINOR_SEQUENCER
 #define SND_DEVICE_TYPE_TIMER	SND_MINOR_TIMER
 
-#ifdef SNDCFG_OSSEMUL
+#ifdef CONFIG_SND_OSSEMUL
 
 #define SND_MINOR_OSS_MASK	0x000f
 
