@@ -26,7 +26,7 @@ snd-seq-midi-emul snd-seq
 snd-seq-instr snd-seq
 
 %DIR kernel/seq/instr
-snd-ainstr-iw snd
+snd-ainstr-iw snd-seq-instr
 
 %DIR detect
 snd-detect snd
