@@ -1,7 +1,7 @@
 #!/bin/sh
 
-MAJOR=@SNDCFG_MAJOR@
-OSSMAJOR=14		# fixed?
+MAJOR=116
+OSSMAJOR=14
 MAX_CARDS=4
 PERM=666
 STATIC=0
