@@ -7,23 +7,23 @@ TOPDIR  = ..
 
 include $(TOPDIR)/Makefile.conf
 
-ifeq (1,$(SNDCFG_MVERSION))
+ifeq (1,$(CONFIG_SND_MVERSION))
 COPTS   += -DMODVERSIONS \
-		-include $(SNDCFG_KERNELDIR)/include/linux/modversions.h \
+		-include $(CONFIG_SND_KERNELDIR)/include/linux/modversions.h \
 		-include $(TOPDIR)/include/sndversions.h
 endif
 COPTS   += -D__KERNEL__ -DMODULE -DEXPORT_SYMTAB -DCONFIG_ISAPNP -DALSA_BUILD
 
 TARGETS = $(SNDVERSIONS)
-ifeq (1,$(SNDCFG_ISAPNP))
-ifeq (0,$(SNDCFG_ISAPNP_KERNEL))
+ifeq (1,$(CONFIG_ISAPNP))
+ifeq (0,$(CONFIG_ISAPNP_KERNEL))
 TARGETS+= $(TOPDIR)/modules/isapnp.o
 endif
 endif
 ISAPNP	= isapnp.o
 ISAPNPE	= $(DEXPORT)/isapnp.ver
-ifeq (1,$(SNDCFG_ISAPNP))
-ifeq (0,$(SNDCFG_ISAPNP_KERNEL))
+ifeq (1,$(CONFIG_ISAPNP))
+ifeq (0,$(CONFIG_ISAPNP_KERNEL))
 SYMFILES = $(ISAPNPE)
 endif
 endif
